// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When src/components/Table.jsx is used should render a table component 1`] = `
<ForwardRef
  bordered={true}
  className="text-light"
  hover={true}
  striped={true}
  variant="dark"
>
  <thead>
    <tr>
      <th
        colSpan="3"
      >
        Despertar
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Verb
      </td>
      <td>
        Wake up
      </td>
      <td>
        <Speech
          text="Wake up"
        />
      </td>
    </tr>
    <tr>
      <td>
        Past
      </td>
      <td>
        Woke up
      </td>
      <td>
        <Speech
          text="Woke up"
        />
      </td>
    </tr>
    <tr>
      <td>
        Past participle
      </td>
      <td>
        Woken up
      </td>
      <td>
        <Speech
          text="Woken up"
        />
      </td>
    </tr>
    <tr>
      <td>
        Example
      </td>
      <td>
        I woke up when the rooster crowed.
      </td>
      <td>
        <Speech
          text="I woke up when the rooster crowed."
        />
      </td>
    </tr>
  </tbody>
</ForwardRef>
`;

exports[`When src/components/Table.jsx is used should render light mode and render final sound 1`] = `
<ForwardRef
  bordered={true}
  className="text-primary"
  hover={true}
  striped={true}
  variant="light"
>
  <thead>
    <tr>
      <th
        colSpan="3"
      >
        Despertar
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Verb
      </td>
      <td>
        Wake up
      </td>
      <td>
        <Speech
          text="Wake up"
        />
      </td>
    </tr>
    <tr>
      <td>
        Past
      </td>
      <td>
        Woke up
      </td>
      <td>
        <Speech
          text="Woke up"
        />
      </td>
    </tr>
    <tr>
      <td>
        Past participle
      </td>
      <td>
        Woken up
      </td>
      <td>
        <Speech
          text="Woken up"
        />
      </td>
    </tr>
    <tr>
      <td>
        Final sound
      </td>
      <td
        colSpan="2"
      >
        T
      </td>
    </tr>
    <tr>
      <td>
        Example
      </td>
      <td>
        I woke up when the rooster crowed.
      </td>
      <td>
        <Speech
          text="I woke up when the rooster crowed."
        />
      </td>
    </tr>
  </tbody>
</ForwardRef>
`;
